# rave

backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/db/schema/: chat.rs  gang.rs  mod.rs  user.rs
backend/src/routes/: mod.rs
backend/src/routes/chat/: mod.rs
backend/src/routes/gang/: handlers.rs  mod.rs
backend/src/routes/user/: mod.rs
backend/src/utils/: jwt.rs
frontend/: package.json
frontend/src/: main.tsx
rave-contract/: .gitignore  Anchor.toml
rave-contract/programs/rave-contract/: Cargo.toml
rave-contract/programs/rave-contract/src/: lib.rs
rave-contract/tests/: rave-contract.ts
