[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.2", features = ["ws"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
envy = "0.4.2"
jsonwebtoken = "9.2.0"
mongodb = "2.8.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [
    "cors",
    "compression-full",
    "timeout",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mongorm = { git = "https://github.com/Vilayat-Ali/mongorm-rs.git", branch = "main" }
